package behavioural.stratgey.withStartegyPattern.strategy;

public interface DriveStrategy {
    void drive();
}
